# mzipsat

./: CMakeLists.txt  README
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  dipoleamplitude.cpp  dipoleamplitude.hpp
